Find approximate non-overlapping matches